fix: blog page width problem on mobile size, h1 size

--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -127,6 +127,7 @@
 }
 
 .post {
+  width: 100%;
   max-width: calc(600px + 10%);
   margin: 0 auto;
   padding: 5%;
