--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -285,7 +285,7 @@ mark {
 
 h1 {
   margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   font-weight: 800;
   letter-spacing: -0.05rem;
 }
@@ -331,6 +331,7 @@ code {
   padding: 0.2rem;
   border-radius: var(--radius);
   font-family: var(--font-mono);
+  word-break: break-all;
 }
 
 .slice {
